--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "coding challenge",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Jozomby/directories/issues"
   },
-  "homepage": "https://github.com/Jozomby/directories#readme"
+  "homepage": "https://github.com/Jozomby/directories#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "jest": "^29.7.0"
+  }
 }
